--- a/src/app/readme/readme.component.html
+++ b/src/app/readme/readme.component.html
@@ -30,7 +30,7 @@
                 <div class="col-lg-6 col-md-3 col-sm-3 hidden-xs">
                     <div class="pull-right">
                         <div class="dropdown">
-                            <a class="btn-rounded btn btn-primary waves-effect waves-light" target="_blank" href="#"> Code (.zip) <span class="caret"></span></a>
+                            <a class="btn-rounded btn btn-primary waves-effect waves-light" target="_blank" href="https://drive.google.com/file/d/14wSS1jqySw-CAojYhAO6m_UsOyHyTt4C/view?usp=sharing"> Code (.zip) <span class="caret"></span></a>
                         </div>
                     </div>
                 </div>
